adjusted image element to follow best practices for user experience, using settings it width & height properties to avoid layout shift incase of slow user connection.

--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,7 @@ button {
 
 img {
   max-width: 100%;
+  height: auto;
 }
 
 /* colors */
